add fast http client
